# marvin

./: .gitignore  requirements.txt
app/: app.vue  package-lock.json  package.json
app/pages/: client.vue  marvin.vue  pose.vue  simple_pose.vue  test.vue
app/server/: config.yml  docker-compose.yml  rosbridge.service
app/server/api/: Dockerfile  app.py
app/server/cloudflared/: config.yml
app/web/: index.html  media_pipe_pose_landmarker_web_app_single_file.html
doc/: .gitignore  main.tex  references.bib
latex/: main.tex
latex/acmart-primary/: .gitignore
ros2_ws/: .gitignore
ros2_ws/src/custom_interfaces/: CMakeLists.txt
ros2_ws/src/custom_interfaces/msg/: HandLandmark.msg
ros2_ws/src/marvin/: package.xml  setup.py
ros2_ws/src/marvin/config/: gazebo_controller_manager.yaml  hardware_controller_manager.yaml
ros2_ws/src/marvin/gazebo/: open_manipulator_x.gazebo.xacro
ros2_ws/src/marvin/launch/: base.launch.py  fake.launch.py  gazebo.launch.py  hardware.launch.py  mimic_operation.launch.py  mimic_web.launch.py
ros2_ws/src/marvin/marvin/: jointGoalPublisher.py  jointVelocityPublisher.py  operation.py  poseDetection.py
ros2_ws/src/marvin/ros2_control/: open_manipulator_x_system.ros2_control.xacro
ros2_ws/src/marvin/rviz/: marvin.rviz
ros2_ws/src/marvin/urdf/: marvin.urdf  marvin.urdf.xacro  marvin_robot.urdf.xacro  single_arm.xacro
ros2_ws/src/marvin_control/: CMakeLists.txt
ros2_ws/src/marvin_control/config/: marvin_rviz_config.rviz  marvin_simulated_config.yaml  servo.yaml  servo_parameters.yaml
ros2_ws/src/marvin_control/executables/: demo_joint_jog.cpp
ros2_ws/src/marvin_control/include/moveit_servo/: collision_monitor.hpp  servo.hpp
ros2_ws/src/marvin_control/include/moveit_servo/utils/: common.hpp
ros2_ws/src/marvin_control/launch/: demo_joint_jog.launch.py  demo_ros_api.launch.py  servo.launch.py
ros2_ws/src/marvin_moveit/config/: initial_positions.yaml  joint_limits.yaml  marvin.ros2_control.xacro  marvin.srdf  moveit_controllers.yaml  moveit_servo.yaml  moveit_servo_left.yaml  moveit_servo_right.yaml  ros2_controllers.yaml
ros2_ws/src/marvin_moveit/launch/: servo.launch.py
ros2_ws/src/marvin_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/marvin_moveit_config/config/: joint_limits.yaml  marvin.ros2_control.xacro  marvin.srdf  moveit_controllers.yaml  ros2_controllers.yaml
server/: ICE_SERVERS.py  peer_answer.py  peer_offer.py  signaling_server.py  turnserver.conf
server/websocket/: signaling_server.py
tests/: _config.py  hub_client.py  peer_answer.py  peer_client.py  peer_host.py  peer_offer.py
tests/http/: README.md  peer_answer.py
tests/websocket/: README.md  peer.py  signaling_server.py
